making the network tests pass

--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cucumber-js"
+    "test": "mocha test && cucumber-js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@cucumber/cucumber": "^8.8.0",
-    "hamjest": "^3.7.3"
+    "hamjest": "^3.7.3",
+    "mocha": "^10.1.0",
+    "sinon": "^14.0.2"
   }
 }
