--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test && cucumber-js"
+    "test": "mocha test && cucumber-js -f @cucumber/pretty-formatter"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@cucumber/cucumber": "^8.8.0",
+    "@cucumber/pretty-formatter": "^1.0.0",
     "hamjest": "^3.7.3",
     "mocha": "^10.1.0",
     "sinon": "^14.0.2"
